update calculadora de imc

--- a/aprendizado_html_css/calculadora_imc/index.html
+++ b/aprendizado_html_css/calculadora_imc/index.html
@@ -7,7 +7,6 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="./css_docs/style.css">
-    <script src="./arquivos_js/calculadora.js"></script>
     <title>Calculadora de IMC</title>
 </head>
 <body>
@@ -35,8 +34,48 @@
 
         <input type="submit" class="btn btn-primary" value="Calcular IMC">
     </form>
+
+    <details>
+        <p>Abaixo está uma tabela acerca dos principais dados acerca do imc segundo a OMS</p>
+        <table class="table" id="quado_imc">
+            <thead>
+                <tr>
+                    <th scope="col">IMC</th>
+                    <th scope="col">Classificações</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Menor que 18.5</td>
+                    <td>Abaixo do Peso Ideal</td>
+                </tr>
+                <tr>
+                    <td>18.5 - 24.9</td>
+                    <td>Peso Ideal</td>
+                </tr>
+                <tr>
+                    <td>25.0 - 29.9</td>
+                    <td>Excesso de Peso</td>
+                </tr>
+                <tr>
+                    <td>30.0 - 34.9</td>
+                    <td>Obesidade I</td>
+                </tr>
+                <tr>
+                    <td>35.0 - 39.9</td>
+                    <td>Obsidade II</td>
+                </tr>
+                <tr>
+                    <td>Maior ou igual a 40.0</td>
+                    <td>Obesidade III</td>
+                </tr>
+            </tbody>
+        </table>
+        <i>Sobre a questão do IMC procure médicos, embora seja um cálculo preciso só ele não basta.</i>
+    </details>
     <footer>
-        <P>Desenvolvido por <a href="https://github.com/pedrofelixg">Pedro Gonçalves</a>.</P>
+        <P>Desenvolvido por <a href="https://github.com/pedrofelixg" target="_blank">Pedro Gonçalves</a>.</P>
     </footer>
 </body>
+<script src="./arquivos_js/calculadora.js"></script>
 </html>
