--- a/aprendizado_html_css/calculadora_imc/index.html
+++ b/aprendizado_html_css/calculadora_imc/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -16,7 +16,7 @@
     </header>
 
     <!--formulário do cálculo-->
-    <form>
+    <form class="form-control">
         <div class="nome">
             <label for="name"><b>Nome</b></label>
             <input type="text" id="name" class="form-control" placeholder="Nome" aria-label="nome" required>
@@ -31,7 +31,7 @@
             <label for="altura"><b>Informe sua Altura</b></label>
             <input type="float" id="altura" class="form-control" placeholder="n.nn" aria-label="altura" required>
         </div>
-        <button type="submit" class="btn btn-primary" onclick="getValues()">Calcular</button>
+        <button type="submit" id="click" class="btn btn-primary">Calcular</button>
     </form>
     <h3 id="notice"></h3>
 
@@ -74,8 +74,9 @@
         <i>Sobre a questão do IMC procure médicos, embora seja um cálculo preciso só ele não basta.</i>
     </details>
     <footer>
+        <i class="fa-brands fa-github"></i>
         <P>Desenvolvido por <a href="https://github.com/pedrofelixg" target="_blank">Pedro Gonçalves</a>.</P>
     </footer>
+    <script src="./arquivos_js/calculadora.js"></script>
 </body>
-<script src="./arquivos_js/calculadora.js"></script>
 </html>
