atividades de error

--- a/aprendizado_html_css/calculadora_imc/index.html
+++ b/aprendizado_html_css/calculadora_imc/index.html
@@ -29,10 +29,7 @@
             <label for="altura"><b>Informe sua Altura</b></label>
             <input type="float" id="altura" class="form-control" placeholder="n.nn" aria-label="altura" required>
         </div>
-
-        <div>
-            <button type="submit" id="click" class="btn btn-primary" onclick>Calcular</button>
-        </div>
+        <button id="click" class="btn btn-primary" onclick="calculaIMC()">Calcular</button>
     </form>
     <h3 id="notice"></h3>
 
@@ -77,6 +74,6 @@
     <footer>
         <P>Desenvolvido por <a href="https://github.com/pedrofelixg" target="_blank">Pedro Gonçalves</a>.</P>
     </footer>
+    <script src="./arquivos_js/calculadora_alt.js"></script>
 </body>
-<script src="./arquivos_js/calculadora_alt.js"></script>
 </html>
